--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,13 +49,15 @@ dependencies:
   flutter_background_service_android: ^6.2.6
   dio: ^5.6.0
   percent_indicator: ^4.2.3
+  liquid_pull_to_refresh: ^3.0.1
+
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^3.1.1
+  firebase_core: ^3.4.0
   firebase_storage: ^12.1.0
   firebase_auth: ^5.1.2
   cloud_firestore: ^5.0.2
